<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/book_ticket"
                android:layout_width="90dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="Book Ticket"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/other_apps"
                android:layout_width="90dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"

                android:text="Other Apps"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/trip_planner"
                android:layout_width="90dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/trip_planner"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_ticket"
                android:layout_width="90dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/view_ticket"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/wallet"
                android:layout_width="90dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/wallet"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>